tests/mvar/reject/list_push_read.nos
# expect: error
# List mvar with unsafe access pattern

mvar items: List[Int] = []

push(x) = {
    items = x :: items
    items
}

get_and_push() = {
    # UNSAFE: reads items, calls push which writes items
    old = items
    push(1)
    old
}

main() = {
    get_and_push()
}
